# uk-health-data-platform

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/sources/: source-inventory.md
scripts/: smoke.py
src/uk_health_platform/: config.py  db.py  smoke_checks.py
